# rustapi

./: .env  Cargo.toml  Makefile
migrations/: 0001_init_user_table.sql
src/: config.rs  database.rs  lib.rs  logger.rs  main.rs  routes.rs
src/repository/: user.rs
src/repository/sql/: select_user_by_email.sql
src/routes/: auth.rs  mod.rs
src/routes/auth/: mod.rs  services.rs
src/usecases/: user.rs
