[package]
name = "rustapi"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.76"
axum = { version = "0.7.2" }
clap = { version = "4.4.11", features = ["derive", "env"] }
dotenv = "0.15.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = { version = "1.0.95" }
sqlx = { version = "0.7", features = ["runtime-tokio", "postgres"] }
tokio = { version = "1.0", features = ["full"] }
tower-http = { version = "0.3.4", features = ["cors"] }
tracing-subscriber = "0.3.18"
